# ChangeLog for sys-apps/lcdtest
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.14 2008/04/22 13:05:46 chainsaw Exp $

  22 Apr 2008; <chainsaw@gentoo.org> -lcdtest-1.01.ebuild,
  -lcdtest-1.02.ebuild, -lcdtest-1.03.ebuild, -lcdtest-1.04.ebuild:
  Housekeeping, delete older ebuilds now that 1.08-r1 is marked stable on
  every arch.

  28 Oct 2007; Markus Rothe <corsair@gentoo.org> lcdtest-1.08-r1.ebuild:
  Stable on ppc64; bug #195218

  23 Oct 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.08-r1.ebuild:
  Mark stable on X86 as requested by Raúl Porcel <armin76@gentoo.org> in bug
  #195218. Tested on a ThinkPad X41 using GCC 4.2.2

  22 Oct 2007; Steve Dibb <beandog@gentoo.org> lcdtest-1.08-r1.ebuild:
  amd64 stable, bug 195218

  22 Oct 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.08-r1.ebuild:
  Mark stable on PPC as requested by Raúl Porcel <armin76@gentoo.org> in bug
  #195218. Tested on a PowerBook 5,9 using GCC 4.2.2

*lcdtest-1.08-r1 (22 Oct 2007)

  22 Oct 2007; Tony Vroon <chainsaw@gentoo.org>
  +files/1.08-help-option.patch, -lcdtest-1.08.ebuild,
  +lcdtest-1.08-r1.ebuild:
  Add patch for help option by Thomas A. (Arch Tester)
  <gentoofan23@gmail.com>. Write a build system in the ebuild as scons is
  freaking out. This negates earlier keywording, delete 1.08 ebuild and
  restart keywording from scratch.

  22 Oct 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.08.ebuild:
  Mark stable on X86 as per bug #195218.

*lcdtest-1.08 (01 Aug 2007)

  01 Aug 2007; Tony Vroon <chainsaw@gentoo.org> lcdtest-1.04.ebuild,
  +lcdtest-1.08.ebuild:
  Version bump to 1.08, 1.04 stable on X86. With thanks to Diego Pettenò
  <flameeyes@gentoo.org> for the scons handling code which I stole from the
  app-i18n/skim ebuild.

*lcdtest-1.04 (07 May 2007)

  07 May 2007; Tony Vroon <chainsaw@gentoo.org> +lcdtest-1.04.ebuild: