@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX 1.08-help-option.patch 360 RMD160 2e8addce02be99e57d1b9cb0931f5fc8383cc9e7 SHA1 bfbf591faee8dd8c235119739f9f6ee29c64ceac SHA256 246cf965102e548403cb115c85079132b7a3c71c2536718d783143dfc61ce580
 DIST lcdtest-1.08.tar.gz 30762 RMD160 bad9b9a8e8f5138f043812fff397db6cde54e160 SHA1 9ad88e26fc2273e4f75d977b64422f8624fe0b3c SHA256 f4cc00b90505ccc2f379d0f481a761ca11f7622abbb078430b595cf3aa287d29
-EBUILD lcdtest-1.08-r1.ebuild 1632 RMD160 11af15c5a228e175a6063df8e3dfe6b1bcfa7184 SHA1 209543c9fea8c818754697e1e631fa5b7eb8bbc5 SHA256 69fd1a8ed269755b893bd522b150a414615fa2567f3449bc9bf6be57060d48be
-MISC ChangeLog 2789 RMD160 67196369c7f0d1fcd358e608eb9c423b5abe7e1b SHA1 dd792f02bacb2907bc8c4bac5d3dc7ab2f06db4f SHA256 7a369fbc42e7b97bce5d9987c7b8996bed2350b48a3d7d0d51f627958ad96233
+EBUILD lcdtest-1.08-r1.ebuild 1640 RMD160 bf3fd693754ab3cea3b0b407975cc293bc017eaf SHA1 06b3d6dd4b1d80e1f12509961de91029a1877dd4 SHA256 19033d952f295d98cc418723a58c9f6fcb667c2caad871219d978f5c63dc5365
+MISC ChangeLog 2920 RMD160 6c13c833c8a170f4ea9a9069654e55897e540c6b SHA1 2d237382b307e50bc55670e5263a1a17dfe32a6d SHA256 274122a0cc55f748ab5fb123ac47df4bd166ac84bdebe02d28bbcadf9be2999b
 MISC metadata.xml 254 RMD160 823c99a514af57fe285c45f08538b7cc18e6342a SHA1 de5f6d0faac7d5f11daa399f9e875c30cac2ce64 SHA256 2817a53a07dd68fef8ec5467cb1a8441e87d77bd7eaf8ce9971de1adfbab7bdc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkgN4qcACgkQp5vW4rUFj5oqlQCfYL9CPoAKbHx3JyD3LgcPytqY
-N6kAoJ2LmhElbcklt/XJCBzNoC8CUIev
-=rFVo
+iEYEARECAAYFAkrUh14ACgkQp5vW4rUFj5r/iACaA5ANC0ntlAE0HaxY7yb0qjvO
+0QsAn1uXNRzYwpvsuWT5v/56MnxJGmZf
+=Hq+k
 -----END PGP SIGNATURE-----
