@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/lcdtest
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.14 2008/04/22 13:05:46 chainsaw Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.15 2009/10/13 13:55:43 chainsaw Exp $
+
+  13 Oct 2009; <chainsaw@gentoo.org> lcdtest-1.08-r1.ebuild:
+  The die command was omitted on some tests. Correct this oversight.
 
   22 Apr 2008; <chainsaw@gentoo.org> -lcdtest-1.01.ebuild,
   -lcdtest-1.02.ebuild, -lcdtest-1.03.ebuild, -lcdtest-1.04.ebuild:
